<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/black"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_baseline_content_paste_24"
                    android:contentDescription="@string/todo" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:text="@string/txt_selecione_a_unidade_para_contagem"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:layout_editor_absoluteX="62dp" />

            <Spinner
                android:id="@+id/cmb_unidade"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:layout_editor_absoluteX="30dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:text="@string/txt_selecione_a_area_para_contagem"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/cmb_unidade"
                tools:layout_editor_absoluteX="62dp" />

            <Spinner
                android:id="@+id/cmb_area"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:layout_editor_absoluteX="30dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/txt_insira_a_data_da_contagem"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/cmb_area"
                tools:layout_editor_absoluteX="62dp" />

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/edt_data_contagem"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/txt_ddmmaaaa"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:typeface="monospace"
                app:allowed_chars="1234567890"
                app:keep_hint="true"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:mask="##/##/####"
                tools:layout_editor_absoluteX="44dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/txt_insira_a_reincidencia_da_contagem"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/edt_data_contagem"
                tools:layout_editor_absoluteX="62dp" />

            <EditText
                android:id="@+id/edt_reincidencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:inputType="number"
                android:maxLength="1"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:layout_editor_absoluteX="39dp"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/txt_insira_o_codigo_do_operador"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/edt_reincidencia"
                tools:layout_editor_absoluteX="62dp" />

            <EditText
                android:id="@+id/edt_cod_operador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:inputType="number"
                android:maxLength="2"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:layout_editor_absoluteX="39dp"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/txt_insira_o_numero_do_coletor"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/edt_cod_operador"
                tools:layout_editor_absoluteX="62dp" />

            <EditText
                android:id="@+id/edt_num_coletor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:inputType="number"
                android:maxLength="2"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:layout_editor_absoluteX="39dp"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/txt_selecione_o_tipo_de_contagem"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/edt_num_coletor"
                tools:layout_editor_absoluteX="62dp" />

            <Spinner
                android:id="@+id/cmb_tipo_contagem"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:layout_editor_absoluteX="30dp"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/txt_sera_permitido_a_edicao_das_celulas_durante_a_contagem"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/cmb_tipo_contagem"
                tools:layout_editor_absoluteX="62dp" />

            <Spinner
                android:id="@+id/cmb_permissao_edicao_celula"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                tools:layout_editor_absoluteX="30dp"/>

            <Button
                android:id="@+id/btn_avancar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/botao_redondo_laranja"
                android:text="@string/txt_avancar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cmb_permissao_edicao_celula"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>